            Changes in numDeriv version 200x.x-x

  o Some documentation links to [stats]numericDeriv mistakenly called 
     numericalDeriv were fixed.  
  

                  numDeriv version 2006.4-1

  o  First released version.