@@ -8,7 +8,8 @@ grad <- function (func, x, method="Richardson", method.args=list(), ...)
    UseMethod("grad")
 
 grad.default <- function(func, x, method="Richardson",
-      method.args=list(eps=1e-4, d=0.0001, r=4, v=2, show.details=FALSE), ...){
+      method.args=list(eps=1e-4, d=0.0001, zero.tol=100*.Machine$double.eps, 
+                       r=4, v=2, show.details=FALSE), ...){
   # modified by Paul Gilbert from code by Xingqiao Liu.
   # case 1/ scalar arg, scalar result (case 2/ or 3/ code should work)
   # case 2/ vector arg, scalar result (same as special case jacobian)
@@ -33,7 +34,7 @@ grad.default <- function(func, x, method="Richardson",
     return(df)
     } else
   if(method=="Richardson"){
-    args <- list(eps=1e-4, d=0.0001, r=4, v=2, show.details=FALSE) # default
+    args <- list(eps=1e-4, d=0.0001, zero.tol=100*.Machine$double.eps, r=4, v=2, show.details=FALSE) # default
     args[names(method.args)] <- method.args
     eps <- args$eps
     d <- args$d
@@ -48,7 +49,7 @@ grad.default <- function(func, x, method="Richardson",
     #  where the indexing variables k for rows(1 to r), i for columns (1 to n),
     #  r is the number of iterations, and n is the number of variables.
   
-    h <- abs(d*x)+eps*(x==0.0)
+    h <- abs(d*x)+eps*(abs(x) < args$zero.tol)
     for(k in 1:r)  { # successively reduce h		    
        if(case1or3)  a[k,] <- (func(x + h, ...) -  func(x - h, ...))/(2*h)
        else for(i in 1:n)  {
@@ -101,7 +102,8 @@ jacobian <- function (func, x, method="Richardson",
                               method.args=list(), ...) UseMethod("jacobian")
 
 jacobian.default <- function(func, x, method="Richardson",
-      method.args=list(eps=1e-4, d=0.0001, r=4, v=2, show.details=FALSE), ...){
+      method.args=list(eps=1e-4, d=0.0001, zero.tol=100*.Machine$double.eps, 
+                       r=4, v=2, show.details=FALSE), ...){
   f <- func(x, ...)
   n <- length(x)	 #number of variables.
   if(method=="simple"){
@@ -118,7 +120,7 @@ jacobian.default <- function(func, x, method="Richardson",
     return(df)
     } else
   if(method=="Richardson"){
-    args <- list(eps=1e-4, d=0.0001, r=4, v=2, show.details=FALSE) # default
+    args <- list(eps=1e-4, d=0.0001, zero.tol=100*.Machine$double.eps, r=4, v=2, show.details=FALSE) # default
     args[names(method.args)] <- method.args
     eps <- args$eps
     d <- args$d
@@ -126,7 +128,7 @@ jacobian.default <- function(func, x, method="Richardson",
     v <- args$v 	  
     a <- array(NA, c(length(f),r, n) )
   
-    h <- abs(d*x)+eps*(x==0.0)
+    h <- abs(d*x)+eps*(abs(x) < args$zero.tol)
     for(k in 1:r)  { # successively reduce h		    
        for(i in 1:n)  {
          a[,k,i] <- (func(x + h*(i==seq(n)), ...) -  
@@ -180,7 +182,8 @@ genD <- function(func, x, method="Richardson",
                    method.args=list(), ...)UseMethod("genD")
 
 genD.default <- function(func, x, method="Richardson",
-      method.args=list(eps=1e-4, d=0.1, r=4, v=2), ...){
+      method.args=list(eps=1e-4, d=0.1, zero.tol=100*.Machine$double.eps, 
+                       r=4, v=2), ...){
   #   additional cleanup by Paul Gilbert (March, 2006)
   #   modified substantially by Paul Gilbert (May, 1992)
   #    from original code by Xingqiao Liu,   May, 1991.
@@ -192,7 +195,7 @@ genD.default <- function(func, x, method="Richardson",
   #	 be a parameter but the way the formula is coded it is assumed to be 2.
  
     if(method != "Richardson")  stop("method not implemented.")
-    args <- list(eps=1e-4, d=0.0001, r=4, v=2) # default
+    args <- list(eps=1e-4, d=0.0001, zero.tol=100*.Machine$double.eps, r=4, v=2) # default
     args[names(method.args)] <- method.args
     eps <- args$eps
     d <- args$d
@@ -206,7 +209,7 @@ genD.default <- function(func, x, method="Richardson",
      #  f0 is the value of the function at x.
 
      p <- length(x)  #  number of parameters (theta)
-     h0 <- abs(d*x)+eps*(x==0.0)
+     h0 <- abs(d*x)+eps*(abs(x) < args$zero.tol)
      D <- matrix(0, length(f0),(p*(p + 3))/2)
      #length(f0) is the dim of the sample space
      #(p*(p + 3))/2 is the number of columns of matrix D.( first
